<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/help_header_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/help_header_1"
                    android:textSize="30sp"
                    android:textColor="@color/colorPrimary"
            >

            </TextView>
            <TextView
                    android:id="@+id/help_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/help_text_1"
                    android:textSize="20sp">
            </TextView>
            <TextView
                    android:id="@+id/help_header_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/help_header_2"
                    android:textSize="30sp"
                    android:textColor="@color/colorPrimary">
            </TextView>
            <TextView
                    android:id="@+id/help_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/help_text_2"
                    android:textSize="20sp">
            </TextView>
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>