<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/curr_ship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/currShip"
            android:textSize="18sp" app:layout_constraintStart_toEndOf="@+id/textCurrentShip"
            android:layout_marginStart="32dp" app:layout_constraintTop_toTopOf="@+id/textCurrentShip"/>
    <TextView
            android:text="@string/current_ship_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textCurrentShip"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/p1LowerGrid" app:layout_constraintStart_toStartOf="@+id/p1LowerGrid"
            android:layout_marginStart="24dp" android:textSize="18sp"/>
    <EditText
            android:layout_width="59dp"
            android:layout_height="36dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextColumn"
            app:layout_constraintStart_toStartOf="@+id/editTextRow"
            app:layout_constraintTop_toTopOf="@+id/textColumn"/>
    <TextView
            android:text="@string/col"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textColumn"
            app:layout_constraintStart_toStartOf="@+id/textRow" android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textRow"/>
    <EditText
            android:layout_width="58dp"
            android:layout_height="42dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextRow"
            app:layout_constraintStart_toEndOf="@+id/textRow" android:layout_marginStart="60dp"
            app:layout_constraintTop_toTopOf="@+id/textRow"/>
    <TextView
            android:text="@string/row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textRow"
            android:textSize="18sp" app:layout_constraintStart_toStartOf="@+id/textCurrentShip"
            app:layout_constraintTop_toBottomOf="@+id/textCurrentShip" android:layout_marginTop="44dp"
            android:layout_marginStart="4dp"
    />
    <ImageView
            android:layout_width="317dp"
            android:layout_height="327dp" app:srcCompat="@drawable/ic_launcher_background"
            android:id="@+id/p1LowerGrid"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.51" app:layout_constraintVertical_bias="0.299"/>
    <Button
            android:text="@string/done_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_place"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp" android:layout_marginBottom="40dp"/>
    <TextView
            android:text="@string/player_1_place_ship_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/player1PlaceShipTitle"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/p1LowerGrid"
            android:textSize="30sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>